gcc/testsuite/rust/compile/parse_invalid_specialization.rs
default fn f() {
    // { dg-error ".default. is only allowed on items within .impl. blocks" "" { target *-*-* } .-1 }
}
